updated bookmark text

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <div class="container">
         <h1>Rerjer</h1>
         <p class='lead'>Transform any page into text that is really difficult to understand, just like Jenny Marone's movie title, "The Rural Juror"</p>
-        <a class='btn btn-lg btn-info' href="javascript:(function() {var queue = [];queue.push(document.body);while(queue.length !== 0) {var curr = queue.pop();var child = curr.firstElementChild;if (!child) {curr.textContent = curr.textContent.replace(/([aiouyAIOUY]+)|e(?!r|\w)/g, 'er');}while(child) {queue.push(child);child = child.nextElementSibling;}}})();void(0);">Drag to Bookmarks</a>
+        <a class='btn btn-lg btn-info' href="javascript:(function() {var queue = [];queue.push(document.body);while(queue.length !== 0) {var curr = queue.pop();var child = curr.firstElementChild;if (!child) {curr.textContent = curr.textContent.replace(/([aiouyAIOUY]+)|e(?!r|\w)/g, 'er');}while(child) {queue.push(child);child = child.nextElementSibling;}}})();void(0);">Rerjer</a>
     </div>
   </body>
 </html>
